
Gameplay:
- fixed Orb of Speed saving on the first move
- warning on entering pits
- fixed incorrect mouse interpretation in spherical ortho

Geometries:
- rendering walls in 3D geometries using a ray-based renderer -- this is configured in 3D settings. Great at rendering quotient spaces at large distances as well as weird geodesics in
  nonisotropic geometries. While less practical for standard HyperRogue, works great in racing. Currently implemented for Euclidean, regular (i.e., not horospherical) hyperbolic, 
  standard Solv, and Nil.
- added some patterns to Nil and Crystal
- optimize racing mode
- quotient spaces using Nil geometry (select Nil then advanced configuration)

Other:
- fixed empty config files incorrectly loaded

2019-10-27 02:48 Version 11.2g:
- fixed worm/tentacle movement
- prevented Gadflies, Hunting Dogs, Vine Beasts, and messenger Gulls from appearing after using Orb of Safety
- Thumpers now attract monsters with special movement rules
- fixed boat graphics
- ray: configurable reflective walls; fixed Euclidean bitruncated honeycomb
- fixed the crashes on generation of 3D elliptic spaces and 3D Crystal
- fixed confusion when moving through 3D elliptic spaces

2019-11-02 22:44 Version 11.2h:
- underlying space view is now available in product space
- raycasting: product spaces, stretched spaces, horospherical honeycombs
- bugfixes in periodic Nil
- alternate 3D races (periodic spaces, etc.)

2019-11-03 14:46 Version 11.2i:
- fixed unfilled shapes when rendering S2xE
- removed outlines from falling stuff
- fixed some issues with preventing Orbs of Yendor from boat moving: 'locked with powerful magic' message spam; no longer movable through land with OoWater; you can jump out of an OoY boat using OoFish/OoAether/OoGravity
- hell unlock message on 10th shard
- levellines feature: shade rendered output by Z coordinate (nice in Hypersian Rug mode)
- fixed the overlay in the texture mode (also disabled in ray -- not implemented)